# xnlpy

./: .editorconfig  .gitattributes  .gitignore  INSTALL_XNLPY.cmd  README.md
notebooks/: Integracao_Numerica.ipynb  Numerical_Integration.ipynb  tb_arraycreation.py
notebooks/Numerical_Integration/: Numerical_Integration.ipynb
src/xnlpy/: xnlpy.cp38-win_amd64.pyd
testbench/: gamma.py  hello.py  lambertw.py  tb_args.py  tb_arraycreation.py  tb_arrayindex.py  tb_derivation.py  tb_fsolve.py  tb_gausselimination.py  tb_integral.py  tb_twod.py  tb_xnlpy.py
xnlpy/: __init__.py  build.cmd  build_xnlpy.cmd  pyproject.toml  setup.py
xnlpy/src/: array.c  array.h  arrayobject.c  arrayobject.h  calculus.h  calculusmodule.c  differentiation.c  gausselimination.c  integralmodule.c  integration.c  linearAlgebra.c  math.c  root_finding.c  xnl.h  xnlpymodule.c
xnlpy/src/xnlpy/: xnlpy.cp38-win_amd64.pyd
xnlpy_build/: build_xnlpy.cmd  build_xnlpy_windows.cmd  setup.py
xnlpy_build/core/: arrayobject.c  arrayobject.h  gausselimination.c  integration.c  math.c  xnl.h  xnlpymodule.c
xnlpy_build/xnlpy.egg-info/: PKG-INFO  SOURCES.txt
